# Volante

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Engine.cpp  Engine.h  GLFWKeyMapper.h  GLFWWindow.cpp  GLFWWindow.h  IWindow.h  Mesh.h  README.md  Shader.h  Volante.cpp  Volante.h  vcpkg.json
Source/Platform/GLFW/: GLFWKeyMapper.h  GLFWWindow.cpp
Source/Runtime/Core/HAL/: IWindow.h  PlatformTypes.h
